# ScanAmatiTest

./: AUTHORS  Makefile  Makefile.am  Makefile.in  README  README.md  aclocal.m4  config.h  config.h.in  config.status  configure  configure.ac
data/: APRM002.temperature  APRM003.bad_strips  APRM003.temperature  Makefile  Makefile.am  Makefile.in  radiation_output
desktop/: Makefile  Makefile.am  Makefile.in  scanamati-debug.desktop  scanamati.desktop  scanamati.xpm
device/: 99-ft2232h.rules  99-xray-scanner.rules  Makefile  Makefile.am  Makefile.in  xray-scanner.conf
docs/: 00-overview  Makefile  Makefile.am  Makefile.in
icons/: Makefile  Makefile.am  Makefile.in
m4/: ccmath.m4  dcmtk_data_shared_library.m4  mysql_loc.m4
po/: Makefile  Makefile.in  Makefile.in.in  POTFILES  POTFILES.in  ru.gmo  ru.po  scanamati.pot
scanner_atmega_firmware/: .cproject  .project  main.c
scanner_atmega_firmware/Debug/: makefile  subdir.mk
scanner_atmega_firmware/Release/: makefile  scanner_firmware.map  scanner_firmware_ver2.map  subdir.mk  test_firmware.elf  test_firmware.hex  test_firmware.lss  test_firmware.map
sounds/: Makefile  Makefile.am  Makefile.in
src/: Makefile  Makefile.am  Makefile.in  application.cpp  application.hpp  ccmath_wrapper.c  ccmath_wrapper.h  dcmtk_defines.hpp  exceptions.hpp  file.cpp  file.hpp  file_loader.cpp  file_loader.hpp  file_saver.cpp  file_saver.hpp  global_strings.hpp  icon_loader.cpp  icon_loader.hpp  icon_names.hpp  main.cpp  main_window.cpp  main_window.hpp  main_window_action_handlers.cpp  main_window_actions.cpp  preferences.cpp  preferences.hpp  utils.cpp  utils.hpp
src/.deps/: application.Po  ccmath_wrapper.Po  file.Po  file_loader.Po  file_saver.Po  icon_loader.Po  main.Po  main_window.Po  main_window_action_handlers.Po  main_window_actions.Po  preferences.Po  utils.Po
src/dialogs/: Makefile  Makefile.am  Makefile.in  acquisition_parameters.cpp  acquisition_parameters.hpp  chip_capacities.cpp  chip_capacities.hpp  chips_lining.cpp  chips_lining.hpp  conquest_archive.cpp  conquest_archive.hpp  dicom_information.cpp  dicom_information.hpp  dicom_server.cpp  dicom_server.hpp  image_acquisition.cpp  image_acquisition.hpp  lining_acquisition.cpp  lining_acquisition.hpp  lining_adjustment.cpp  lining_adjustment.hpp  move_dicom.cpp  move_dicom.hpp  person_name.cpp  person_name.hpp  preferences.cpp  preferences.hpp  print_parameters.cpp  print_parameters.hpp  save_as.cpp  save_as.hpp  scanner_debug.cpp  scanner_debug.hpp  scanner_template.cpp  scanner_template.hpp  store_dicom.cpp  store_dicom.hpp  temperature_margins.cpp  temperature_margins.hpp  utils.cpp  (+1 more)
src/dialogs/.deps/: acquisition_parameters.Po  chip_capacities.Po  conquest_archive.Po  dicom_information.Po  dicom_server.Po  image_acquisition.Po  lining_acquisition.Po  lining_adjustment.Po  move_dicom.Po  person_name.Po  preferences.Po  print_parameters.Po  save_as.Po  scanner_debug.Po  scanner_template.Po  store_dicom.Po  temperature_margins.Po  utils.Po
src/dicom/: Makefile  Makefile.am  Makefile.in  conquest.cpp  conquest.hpp  information.hpp  patient_age.cpp  patient_age.hpp  patient_information.hpp  server.cpp  server.hpp  short_information.cpp  short_information.hpp  study_information.hpp  summary_information.cpp  summary_information.hpp  tag_string_map.hpp  typedefs.hpp  user_commands.cpp  user_commands.hpp  utils.cpp  utils.hpp  xmedcon_wrapper.c  xmedcon_wrapper.h
src/dicom/.deps/: conquest.Po  patient_age.Po  server.Po  short_information.Po  summary_information.Po  user_commands.Po  utils.Po  xmedcon_wrapper.Po
src/image/: Makefile  Makefile.am  Makefile.in  calibration.cpp  calibration.hpp  data.cpp  data.hpp  summary_data.cpp  summary_data.hpp
src/image/.deps/: calibration.Po  data.Po  summary_data.Po
src/palette/: Makefile  Makefile.am  Makefile.in  palette.cpp  palette.hpp
src/palette/.deps/: palette.Po
src/print/: Makefile  Makefile.am  Makefile.in  operation.cpp  operation.hpp
src/print/.deps/: operation.Po
src/scanner/: Makefile  Makefile.am  Makefile.in  acquisition.cpp  acquisition.hpp  adc_count.cpp  adc_count.hpp  assemble.cpp  assemble.hpp  builtin_chip_capacities.cpp  builtin_chip_capacities.hpp  commands.cpp  commands.hpp  data.cpp  data.hpp  defines.hpp  image_calibration.cpp  image_calibration.hpp  image_data.cpp  image_data.hpp  manager.cpp  manager.hpp  manager_device.cpp  manager_state.hpp  movement.cpp  movement.hpp  run_arguments.cpp  run_arguments.hpp  state.cpp  state.hpp  temperature_regulator.cpp  temperature_regulator.hpp  x-ray.cpp  x-ray.hpp
src/scanner/.deps/: acquisition.Po  adc_count.Po  assemble.Po  builtin_chip_capacities.Po  commands.Po  data.Po  image_calibration.Po  image_data.Po  manager.Po  manager_device.Po  manager_state.Po  movement.Po  run_arguments.Po  state.Po  temperature_regulator.Po  x-ray.Po
src/widgets/: Makefile  Makefile.am  Makefile.in  files_icon_view.cpp  files_icon_view.hpp  image_area.cpp  image_area.hpp  information_notebook.cpp  information_notebook.hpp  palette_area.cpp  palette_area.hpp  scrolled_image_area.cpp  scrolled_image_area.hpp  status_bar.cpp  status_bar.hpp  utils.cpp  utils.hpp
src/widgets/.deps/: files_icon_view.Po  image_area.Po  information_notebook.Po  palette_area.Po  scrolled_image_area.Po  status_bar.Po  utils.Po
ui/: Makefile  Makefile.am  Makefile.in  acquisition-parameters-dialog.glade  c-move-dialog.glade  c-store-dialog.glade  chip-capacities-dialog.glade  conquest-archive-dialog.glade  dicom-information-dialog.glade  dicom-server-dialog.glade  image-acquisition-dialog.glade  lining-acquisition-dialog.glade  lining-adjustment-dialog.glade  main-window.glade  menus-bars.ui  person-name-dialog.glade  preferences-dialog.glade  scanner-debug-dialog.glade  temperature-margins-dialog.glade
