themedir = $(datadir)/icons/hicolor
pixmapdir = $(datadir)/pixmaps
appicondir = $(themedir)/48x48/apps
dist_appicon_DATA = scanamati.png
svgicondir = $(themedir)/scalable/apps
dist_svgicon_DATA = scanamati.svg

desktopdir = $(datadir)/applications

desktop_DATA = scanamati.desktop scanamati-debug.desktop

pixmap_DATA = scanamati.xpm

EXTRA_DIST = $(desktop_DATA) $(pixmap_DATA)
