iconsdir = ${SCANAMATI_DATADIR}/icons

icons_DATA = \
	empty.png \
	patient.png \
	radiation_indicator_active.svg \
	radiation_indicator_active.png \
	radiation_indicator_inactive.svg \
	radiation_indicator_inactive.png \
	light_red.svg \
	light_yellow.svg \
	light_green.svg \
	light_none.svg \
	light_red.png \
	light_yellow.png \
	light_green.png \
	light_none.png

EXTRA_DIST = $(icons_DATA)
