uidir = ${SCANAMATI_DATADIR}/ui
ui_DATA = main-window.glade \
	acquisition-parameters-dialog.glade \
	person-name-dialog.glade \
	lining-acquisition-dialog.glade \
	lining-adjustment-dialog.glade \
	image-acquisition-dialog.glade \
	c-move-dialog.glade \
	c-store-dialog.glade \
	temperature-margins-dialog.glade \
	conquest-archive-dialog.glade \
	chip-capacities-dialog.glade \
	scanner-debug-dialog.glade \
	dicom-information-dialog.glade \
	dicom-server-dialog.glade \
	preferences-dialog.glade \
	menus-bars.ui

EXTRA_DIST = $(ui_DATA)
