noinst_LIBRARIES = libdialogs.a

libdialogs_a_SOURCES = \
	acquisition_parameters.hpp \
	acquisition_parameters.cpp \
	conquest_archive.hpp \
	conquest_archive.cpp \
	scanner_template.hpp \
	scanner_template.cpp \
	scanner_debug.hpp \
	scanner_debug.cpp \
	image_acquisition.hpp \
	image_acquisition.cpp \
	lining_acquisition.hpp \
	lining_acquisition.cpp \
	lining_adjustment.hpp \
	lining_adjustment.cpp \
	chip_capacities.hpp \
	chip_capacities.cpp \
	temperature_margins.hpp \
	temperature_margins.cpp \
	move_dicom.hpp \
	move_dicom.cpp \
	store_dicom.hpp \
	store_dicom.cpp \
	preferences.hpp \
	preferences.cpp \
	print_parameters.hpp \
	print_parameters.cpp \
	person_name.hpp \
	person_name.cpp \
	dicom_server.hpp \
	dicom_server.cpp \
	dicom_information.hpp \
	dicom_information.cpp \
	save_as.hpp \
	save_as.cpp \
	utils.hpp \
	utils.cpp

AM_CXXFLAGS = $(GTKMM_CFLAGS) $(MAGICK_CFLAGS) $(LIBPQXX_CFLAGS) \
	-I$(top_srcdir)/src
