noinst_LIBRARIES = libwidgets.a

libwidgets_a_SOURCES = \
	information_notebook.hpp \
	information_notebook.cpp \
	image_area.hpp \
	image_area.cpp \
	scrolled_image_area.hpp \
	scrolled_image_area.cpp \
	palette_area.hpp \
	palette_area.cpp \
	status_bar.hpp \
	status_bar.cpp \
	files_icon_view.hpp \
	files_icon_view.cpp \
	utils.hpp \
	utils.cpp

AM_CXXFLAGS = $(GTKMM_CFLAGS) $(XMEDCON_CFLAGS) \
	$(MAGICK_CFLAGS) \
	-I$(top_srcdir)/src
